Version 2.0.0
----------------------------------------------------------------
8 February 2008
+ Broke out image resize so default parent link setting would work
  again. 
+ Caption function grabs tag with linked status sent now.

7 February 2008
+ Added ability to force users to resize their images.
+ convertMediaToFileAssoc added.
+ Added getSource function to return an association's source object
+ Added ability for dev to suppress image captions.
+ imageOnly can now be set to suppress random and folder options
+ documentOnly can now suppress folder option
+ converting images is now tracked in new table
+ Fixed bug on type locking.
+ Changing file_assoc to load the source on initialization
+ Added _file_path parameter to File_Assoc which is set when loading
  source.
+ Fixed '=' instead of '==' error in Folder.php
+ Added missing pinTags function to Multimedia.
+ Rewrote some of getTag to use source

6 February 2008
+ Combined and pared style sheets.
+ Fixed convert function to use proper variable
+ Style changes to admin document form

5 February 2008
+ Added duration and embedded column to multimedia table.
+ File deletions moved to File_Common (commonDelete) to reduce overlap
+ Each file type deletes it file association as well.
+ Resize code is now using the define for its directory.
+ Folder deletion now deletes any associations.
+ Size default in File_Common is zero not null.
+ Error check added to pickFile function.
+ Added the option to add embedded videos to multimedia folders.
+ resizePath broken into getResizePath and makeResizePath
+ Removed some unnecessary code.
+ loadVideoDimensions is now just loadDimensions.
+ Resize directory is now in the folder containing the image. Removed
  define from config file.
+ Added youtube filters.

1 February 2008
+ getFile returns actually object. getTag returns just content.
+ getResize function can be set to return with a link to the parent
  image.

30 January 2008