@@ -40,3 +40,7 @@ span.fc-download-label {
    background-color : #E9E9E9;
    font-size : 10px;
 }
+
+.fc-one-file {
+   font-size : 1.2em;
+}
