@@ -1,6 +1,6 @@
 <div class="fc-download-document">
 <div class="fc-dl-icon">{ICON}</div>
 <div class="fc-info"><span class="fc-download-label">{DOWNLOAD}</span><br />
-<span class="fc-one-file">{TITLE}</span><br /><span class="smaller">({SIZE})</span>
+<ul><!-- BEGIN files --><li>{TITLE}&nbsp;<span class="smaller">({SIZE})</span></li><!-- END files --></ul>
 </div>
 </div>
